Linux utility for listing USB C Power Delivery information.

Changelog for pre-release lsucpd-0.90 [20230828] [svn: r11]
  - build framework by copying lsscsi repository
  - doc/usb_pd_pdo_rdo.pdf added for PDO and RDO tables
  - fixes to build with G++ 12, almost builds on clang++ 14
    checked builds on U 22.04 LTS and Fedora 38
