@@ -1,4 +1,4 @@
-.TH LSUCPD_JSON "8" "July 2023" "lsucpd\-0.90" LSUCPD
+.TH LSUCPD_JSON "8" "September 2023" "lsucpd\-0.90" LSUCPD
 .SH NAME
 lsucpd_json \- JSON output options for the lsucpd utility
 .SH SYNOPSIS
