@@ -10,7 +10,7 @@
  * SPDX-License-Identifier: BSD-2-Clause
  */
 
-#include <version>	// needed to define __cpp_lib_format (or not)
+#include <version>      // needed to define __cpp_lib_format (or not)
 
 // [dpg] C++20 spec says '#define __cpp_lib_format 201907L so expect first
 // [dpg] leg of following conditional will be chosen.
@@ -37,47 +37,59 @@
 void
 pr2ser(int vb_ge, const std::string & emsg,
        const std::error_code & ec = { },
-       const std::source_location loc = std::source_location::current());
+       const std::source_location loc = std::source_location::current())
+        noexcept;
 
 void
 pr3ser(int vb_ge, const std::string & e1msg,
        const char * e2msg = NULL,
        const std::error_code & ec = { },
-       const std::source_location loc = std::source_location::current());
+       const std::source_location loc = std::source_location::current())
+        noexcept;
 
 void
 pr4ser(int vb_ge, const std::string & e1msg,
        const std::string & e2msg, const char * e3msg = NULL,
        const std::error_code & ec = { },
-       const std::source_location loc = std::source_location::current());
+       const std::source_location loc = std::source_location::current())
+        noexcept;
+
 #else
+
 void
 pr2ser(int vb_ge, const std::string & emsg,
-       const std::error_code & ec = { });
+       const std::error_code & ec = { }) noexcept;
 
 void
 pr3ser(int vb_ge, const std::string & e1msg,
        const char * e2msg = NULL,
-       const std::error_code & ec = { });
+       const std::error_code & ec = { }) noexcept;
 
 void
 pr4ser(int vb_ge, const std::string & e1msg,
        const std::string & e2msg, const char * e3msg = NULL,
-       const std::error_code & ec = { });
+       const std::error_code & ec = { }) noexcept;
 
 #endif
 
 
 extern int lsucpd_verbose;
 
-template<typename... Args> constexpr void print_err(int vb_ge, const std::string_view str_fmt, Args&&... args) {
-	if (vb_ge >= lsucpd_verbose)       // vb_ge==-1 always prints
+template<typename... Args>
+    constexpr void print_err(int vb_ge, const std::string_view str_fmt,
+                             Args&&... args) noexcept {
+        if (vb_ge >= lsucpd_verbose)       // vb_ge==-1 always prints
             return;
-        fputs(BWP_FMTNS::vformat(str_fmt, BWP_FMTNS::make_format_args(args...)).c_str(), stderr);
+        fputs(BWP_FMTNS::vformat(str_fmt,
+                                 BWP_FMTNS::make_format_args(args...)).c_str(),
+                                 stderr);
 }
 
-template<typename... Args> constexpr std::string fmt_to_str(const std::string_view str_fmt, Args&&... args) {
-        return BWP_FMTNS::vformat(str_fmt, BWP_FMTNS::make_format_args(args...));
+template<typename... Args>
+    constexpr std::string fmt_to_str(const std::string_view str_fmt,
+                                     Args&&... args) noexcept {
+        return BWP_FMTNS::vformat(str_fmt,
+                                  BWP_FMTNS::make_format_args(args...));
 }
 
-#endif 		/* end of #ifndef LSUCPD_HPP */
+#endif          /* end of #ifndef LSUCPD_HPP */
